fix: router playground cursor visibility (#1451)

--- a/playground/src/theme.css
+++ b/playground/src/theme.css
@@ -260,3 +260,7 @@ body.graphiql-dark [data-radix-popper-content-wrapper] {
 .graphiql-tabs {
   @apply z-10;
 }
+
+.graphiql-container .CodeMirror-cursor {
+  border-left: 2px solid gray !important;
+}
